--- a/Lession 09/hw3.html
+++ b/Lession 09/hw3.html
@@ -73,7 +73,7 @@
 			</div>
 			<div id="section1">
 				<h3>Section 1</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt autem nostrum eum dolorem mollitia non illo omnis eaque quisquam nisi. Aut nihil, odio assumenda explicabo voluptatem officia at quo temporibus sint repudiandae recusandae. Tenetur.</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt autem nostrum eum dolorem mollitia non illo omnis eaque quisquam nisi. Aut nihil, odio assumenda explicabo voluptatem of</p>
 			</div>
 			<div id="section2">  
 				<h3>Section 2</h3>
