--- a/Lession 13/index.html
+++ b/Lession 13/index.html
@@ -25,9 +25,9 @@
 <body>
 	<div class="container-fluid">
 		<div class="row">
-			<!-- <div class="col-4 col-lg-2 col-md-3 col-sm-4 square red"></div>
+			<div class="col-4 col-lg-2 col-md-3 col-sm-4 square red"></div>
 			<div class="col-4 col-lg-4 col-md-4 col-sm-4 square blue"></div>
-			<div class="col-4 col-lg-6 col-md-5 col-sm-4 square green"></div> -->
+			<div class="col-4 col-lg-6 col-md-5 col-sm-4 square green"></div>
 			
 		</div>
 	</div>
